[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "powerapi"
description = "PowerAPI is a middleware toolkit for building software-defined power meters."
readme = "README.md"
keywords = ["powerapi", "energy", "power-meter", "green-computing"]
license = {text = "BSD-3-Clause"}
requires-python = ">=3.10"
dynamic = ["version"]

classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

authors = [
    {name = "PowerAPI Staff", email = "powerapi-staff@inria.fr"},
]

dependencies = [
    "pyzmq >= 18.1.0",
    "setproctitle >= 1.1.8"
]

[project.optional-dependencies]
# Databases:
mongodb = ["pymongo >= 3.7.2"]
influxdb = ["influxdb-client >= 1.30.0"]
opentsdb = ["opentsdb-py >= 0.6.0"]
prometheus = ["prometheus-client >= 0.9.0"]

# Plaforms:
kubernetes = ["kubernetes >= 27.0.2"]

# Aliases:
all-databases = ["powerapi[mongodb, influxdb, opentsdb, prometheus]"]
all-platforms = ["powerapi[kubernetes]"]
everything = ["powerapi[all-databases, all-platforms]"]

[dependency-groups]
test = [
    "pytest >= 7.0.1",
    "pytest-timeout >= 1.4.2",
    "pytest-cov >= 4.0.0"
]

docs = [
    "sphinx >= 1.8.1",
    "sphinx-autodoc-typehints >= 1.6.0"
]

lint = [
    "pylint >= 2.16.0",
    "ruff >= 0.9.6"
]

dev = [
    {include-group = 'test'},
    {include-group = 'docs'},
    {include-group = 'lint'}
]

[project.urls]
homepage = "https://powerapi.org"
documentation = "https://powerapi.readthedocs.org"
repository = "https://github.com/powerapi-ng/powerapi"

[tool.setuptools.dynamic]
version = {attr = "powerapi.__version__"}
