[metadata]
name = powerapi
version = attr: powerapi.__version__
description = PowerAPI is a middleware toolkit for building software-defined power meters.
long_description = file: README.md, LICENSE
long_description_content_type= text/markdown
keywords = energy, powerapi, power meter
platform = any
author = Guillaume Fieni, Arthur d'Azémar, Jordan Bouchoucha, Romain Rouvoy
author_email = powerapi-staff@inria.fr
license = BSD 3-Clause License
classifiers =
	    Programming Language :: Python :: 3.7
	    License :: OSI Approved :: BSD License
	    # Framework :: PowerAPI

project_urls =
	     Homepage = http://powerapi.org/
	     Documentation = https://powerapi.readthedocs.io
	     Source = https://github.com/powerapi-ng/powerapi

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.7
packages = find:
test_suite = tests
setup_requires =
    pytest-runner >=3.9.2
install_requires =
    pyzmq >=17.1
    setproctitle >=1.1.10
tests_require =
    pytest >=3.9.2
    mock >=2.0

[options.extras_require]
mongodb =
    pymongo >=3.7.2
docs =
    sphinx >=1.8.1
    sphinx-autodoc-typehints >=1.6.0

[aliases]
test = pytest

[bdist_wheel]
universal = true
